# legion

./: .travis.yml  CMakeLists.txt
cmake/: LegionConfig.cmake.in
language/: regent.py
language/src/regent/: passes.t
language/tests/run_pass/: call_task_region_fields.rg  optimize_spmd.rg  optimize_spmd1.rg  optimize_spmd2.rg  optimize_spmd3.rg
runtime/: CMakeLists.txt
runtime/legion/: CMakeLists.txt
runtime/mappers/: CMakeLists.txt
runtime/realm/: CMakeLists.txt
